# vitrine-pdv

./: README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/accounts/: admin.py  managers.py  models.py  serializers.py  services.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/accounts/tests/: test_auth.py
backend/catalog/: admin.py  models.py  serializers.py  urls.py  views.py
backend/catalog/migrations/: 0001_initial.py  0002_productview.py
backend/catalog/services/: merchant_products.py  product_views.py
backend/catalog/tests/: test_merchant_products.py  test_public_products.py
backend/core/: asgi.py  exceptions.py  openapi.py  settings.py  urls.py  views.py
backend/core/services/: media.py
backend/core/settings/: __init__.py  base.py  local.py  production.py
backend/core/tests/: test_health.py  test_media.py
backend/engagement/: admin.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  urls.py  views.py  views_notifications.py  views_reviews.py
backend/engagement/migrations/: 0001_initial.py  0002_review.py  0003_notification.py
backend/engagement/services/: favorites.py  notification_broadcast.py  notifications.py  reviews.py
backend/marketing/: admin.py  models.py  serializers.py  urls.py  views.py
backend/nginx/: nginx.conf
backend/scripts/: entrypoint.sh
backend/stores/: admin.py  models.py  permissions.py  serializers.py  serializers_merchant_stats.py  urls.py  views.py
frontend/: .env.example  (+6 more)
(+192 files in other folders)
