[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "channels>=4.2.0",
    "uvicorn[standard]>=0.34.0",
    "django>=6.0.7",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.14.0",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "pillow>=12.3.0",
    "psycopg[binary]>=3.3.4",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["accounts", "catalog", "core", "engagement", "marketing", "stores"]
